--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,25 @@
-h1 {
-  color: red; }
-  h1:hover {
-    color: green; }
+html {
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.0rem; }
+
+li {
+  list-style: none; }
+
+#wrapper {
+  max-width: 1200px;
+  padding: 40px; }
+  @media screen and (max-width: 414px) {
+    #wrapper {
+      padding: 20px; } }
+
+header h1 {
+  font-size: 1.6rem; }
+
+main {
+  margin-top: 30px; }
+  main .skill {
+    margin-top: 30px; }
+    main .skill ul li {
+      margin-top: 10px; }
