--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,56 @@
+@charset "UTF-8";
 html {
   font-size: 62.5%; }
 
 body {
-  font-size: 1.0rem; }
+  font-size: 1.6rem; }
 
 li {
   list-style: none; }
 
-#wrapper {
-  max-width: 1200px;
-  padding: 40px; }
-  @media screen and (max-width: 414px) {
-    #wrapper {
-      padding: 20px; } }
+/*-----------------------------------------
+マルチスクリーン
+-----------------------------------------*/
+.ms-section {
+  text-align: center; }
 
-header h1 {
-  font-size: 1.6rem; }
+/*-----------------------------------------
+ナビゲーション
+-----------------------------------------*/
+nav {
+  width: 100%;
+  z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0; }
+  nav ul {
+    overflow: hidden; }
+    nav ul li {
+      float: left;
+      width: 33.333%;
+      text-align: center;
+      border-bottom: solid 1px #000; }
+      nav ul li a {
+        display: block;
+        padding: 15px;
+        color: #333;
+        text-decoration: none;
+        background: #fff; }
+    nav ul .active a {
+      background: #000;
+      color: #fff; }
 
-main {
-  margin-top: 30px; }
-  main .skill {
-    margin-top: 30px; }
-    main .skill ul li {
-      margin-top: 10px; }
+/*-----------------------------------------
+コンテンツ
+-----------------------------------------*/
+.lead {
+  background: #000;
+  color: #fff;
+  font-weight: bold;
+  font-size: 2rem; }
+
+table {
+  margin: 20px auto 0; }
+  table th, table td {
+    text-align: left;
+    padding: 10px; }
