--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+  font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif; }
 
 li {
   list-style: none; }
@@ -22,7 +23,8 @@ nav {
   z-index: 100;
   position: fixed;
   top: 0;
-  left: 0; }
+  left: 0;
+  font-family: 'Quicksand', sans-serif; }
   nav ul {
     overflow: hidden; }
     nav ul li {
@@ -47,7 +49,8 @@ nav {
   background: #000;
   color: #fff;
   font-weight: bold;
-  font-size: 2rem; }
+  font-size: 5rem;
+  font-family: 'Quicksand', sans-serif; }
 
 table {
   margin: 20px auto 0; }
