--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@ html {
 }
 body {
 	font-size: 1.6rem;
+	font-family:"游ゴシック", YuGothic, "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", sans-serif;
 }
 li {
 	list-style: none;
@@ -29,6 +30,7 @@ nav {
 	position: fixed;
 	top: 0;
 	left: 0;
+	font-family: 'Quicksand', sans-serif;
 	ul {
 		overflow: hidden;
 		li {
@@ -58,7 +60,9 @@ nav {
 	background: #000;
 	color: #fff;
 	font-weight: bold;
-	font-size: 2rem;
+	font-size: 5rem;
+	font-family: 'Quicksand', sans-serif;
+
 }
 table {
 	margin: 20px auto 0;
