--- a/css/style.css
+++ b/css/style.css
@@ -31,19 +31,36 @@ nav {
       float: left;
       width: 33.333%;
       text-align: center;
-      border-bottom: solid 1px #000; }
+      border-bottom: solid 1px #000;
+      position: relative;
+      overflow: hidden; }
       nav ul li a {
         display: block;
         padding: 15px;
         color: #333;
         text-decoration: none;
         background: #fff; }
+        nav ul li a:after {
+          display: inline-block;
+          content: '';
+          position: absolute;
+          top: 0%;
+          left: -100%;
+          width: 100%;
+          background: #000;
+          height: 46px;
+          -webkit-transition: all .6s;
+          transition: all .6s;
+          opacity: 0.2; }
+        nav ul li a:hover::after {
+          top: 0;
+          left: 0; }
     nav ul .active a {
       background: #000;
       color: #fff; }
 
 /*-----------------------------------------
-コンテンツ
+	コンテンツ共通
 -----------------------------------------*/
 .lead {
   background: #000;
@@ -53,7 +70,110 @@ nav {
   font-family: 'Quicksand', sans-serif; }
 
 table {
-  margin: 20px auto 0; }
+  margin: 0 auto; }
+  table th {
+    padding-right: 20px; }
   table th, table td {
     text-align: left;
-    padding: 10px; }
+    padding-top: 10px; }
+
+/*-----------------------------------------
+	rightコンテンツ
+-----------------------------------------*/
+/*About*/
+.about .myImage {
+  overflow: hidden;
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: solid 5px #c1c1c1;
+  margin-bottom: 30px; }
+  .about .myImage img {
+    width: 100%;
+    height: auto; }
+
+.about .skill {
+  margin-top: 30px; }
+  .about .skill dl {
+    margin: 10px auto 0;
+    display: table; }
+  .about .skill dt, .about .skill dd {
+    display: table-cell;
+    vertical-align: middle; }
+  .about .skill dt {
+    width: 80px;
+    text-align: right;
+    padding-right: 10px; }
+  .about .skill dd {
+    width: 280px;
+    height: 20px;
+    background: #c7c7c7;
+    text-indent: -9999px;
+    margin-left: 20px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    overflow: hidden;
+    position: relative; }
+    .about .skill dd span {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 20px; }
+  .about .skill .html5 dd span {
+    background: #6bb9f2; }
+  .about .skill .css3 dd span {
+    background: #e3f26b; }
+  .about .skill .javascript dd span {
+    background: #f26b6b; }
+  .about .skill .jquery dd span {
+    background: #f29b6b; }
+  .about .skill .php dd span {
+    background: #6bf27c; }
+  .about .skill .wordpress dd span {
+    background: #737373; }
+
+/*contact*/
+.sns {
+  margin-top: 20px; }
+
+/*-----------------------------------------
+	leftコンテンツ
+-----------------------------------------*/
+/*Works*/
+.works section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-end;
+  margin-right: -30px; }
+  .works section a {
+    color: #000; }
+
+.works article {
+  margin-top: 30px;
+  margin-right: 30px; }
+  .works article h3 {
+    text-align: left;
+    margin-bottom: 5px;
+    line-height: 1.3; }
+  .works article p {
+    font-size: 1.2rem;
+    text-align: left;
+    margin-bottom: 5px; }
+    .works article p span {
+      font-weight: bold; }
+  .works article .worksImage {
+    border: solid 3px #000; }
+    .works article .worksImage:hover {
+      opacity: 0.5;
+      transition: 0.5s; }
+    @media screen and (max-width: 960px) {
+      .works article .worksImage {
+        width: 100px;
+        margin: 0 auto; }
+        .works article .worksImage img {
+          width: 100px;
+          height: auto; } }
