--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,12 +38,31 @@ nav {
 			width: 33.333%;
 			text-align: center;
 			border-bottom: solid 1px #000;
+			position: relative;
+			overflow: hidden;
 			a {
 				display: block;
 				padding: 15px;
 				color: #333;
 				text-decoration: none;
 				background: #fff;
+				&:after {
+					display: inline-block;
+				    content: '';
+				    position: absolute;
+				    top: 0%;
+				    left: -100%;
+				    width: 100%;
+				    background: #000;
+				    height: 46px;
+					-webkit-transition: all .6s;
+					transition: all .6s;
+					opacity: 0.2;
+				}
+				&:hover::after {
+					top: 0;
+					left: 0;
+				}
 			}
 		}
 		.active a {
@@ -54,7 +73,7 @@ nav {
 }
 
 /*-----------------------------------------
-コンテンツ
+	コンテンツ共通
 -----------------------------------------*/
 .lead {
 	background: #000;
@@ -65,9 +84,145 @@ nav {
 
 }
 table {
-	margin: 20px auto 0;
+	margin: 0 auto;
+	th {
+		padding-right: 20px;
+
+	}
 	th,td {
 		text-align: left;
-		padding: 10px;
+		padding-top: 10px;
+	}
+}
+
+
+/*-----------------------------------------
+	rightコンテンツ
+-----------------------------------------*/
+
+/*About*/
+.about {
+	.myImage {
+		overflow: hidden;
+		width: 150px;
+		height: 150px;
+		margin: 0 auto;
+		border-radius: 50%;
+		border: solid 5px #c1c1c1;
+		margin-bottom: 30px;
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
+	.skill {
+		margin-top: 30px;
+		dl {
+			margin: 10px auto 0;
+			display: table;
+		}
+		dt,dd {
+			display: table-cell;
+			vertical-align: middle;
+		}
+		dt {
+			width: 80px;
+			text-align: right;
+			padding-right: 10px;
+		}
+		dd {
+			width: 280px;
+			height: 20px;
+			background: #c7c7c7;
+			text-indent: -9999px;
+			margin-left: 20px;
+			border-radius: 5px;
+			-webkit-border-radius: 5px;
+			-moz-border-radius: 5px;
+			overflow: hidden;
+			position: relative;
+			span {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 0;
+				height: 20px;
+			}
+		}
+		.html5 dd span {
+			background: #6bb9f2;
+		}
+		.css3 dd span {
+			background: #e3f26b;
+		}
+		.javascript dd span {
+			background: #f26b6b;
+		}
+		.jquery dd span {
+			background: #f29b6b;
+		}
+		.php dd span {
+			background: #6bf27c;
+		}
+		.wordpress dd span {
+			background: #737373;
+		}
+
+	}
+}
+
+/*contact*/
+.sns {
+	margin-top: 20px;
+}
+
+
+/*-----------------------------------------
+	leftコンテンツ
+-----------------------------------------*/
+
+/*Works*/
+.works {
+	section {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: flex-end;
+		a {
+			color: #000;
+		}
+		margin-right: -30px;
+	}
+	article {
+		margin-top: 30px;
+		margin-right: 30px;
+		h3 {
+			text-align: left;
+			margin-bottom: 5px;
+			line-height: 1.3;
+		}
+		p {
+			font-size: 1.2rem;
+			text-align: left;
+			margin-bottom: 5px;
+			span {
+				font-weight: bold;
+			}
+		}
+		.worksImage {
+			border: solid 3px #000;
+			&:hover {
+				opacity: 0.5;
+				transition: 0.5s;
+			}
+			@media screen and (max-width: 960px) {
+				width: 100px;
+				margin: 0 auto;
+				img {
+					width: 100px;
+					height: auto;
+				}
+			}
+		}
 	}
 }
