--- a/sass/style.scss
+++ b/sass/style.scss
@@ -172,9 +172,15 @@ table {
 }
 
 /*contact*/
-.sns {
-	margin-top: 20px;
+.contact {
+	.sns {
+		margin-top: 20px;
+	}
+	a {
+		color: #70aae6;
+	}
 }
+
 
 
 /*-----------------------------------------
