--- a/css/sp.css
+++ b/css/sp.css
@@ -46,9 +46,9 @@ nav {
         padding: 15px;
         color: #333;
         text-decoration: none;
-        background: #fff; }
+        background: rgba(255, 255, 255, 0.9); }
     nav ul .active {
-      background: #000;
+      background: rgba(0, 0, 0, 0.9);
       color: #fff; }
 
 /*-----------------------------------------
