--- a/sass/sp.scss
+++ b/sass/sp.scss
@@ -50,11 +50,11 @@ nav {
 				padding: 15px;
 				color: #333;
 				text-decoration: none;
-				background: #fff;
+				background: rgba(255, 255, 255, 0.9);
 			}
 		}
 		.active {
-			background: #000;
+			background: rgba(0, 0, 0, 0.9);
 			color: #fff;
 		}
 	}
