--- a/sass/sp.scss
+++ b/sass/sp.scss
@@ -193,7 +193,7 @@ table {
 		}
 	}
 	article {
-		margin-top: 30px;
+		margin-bottom: 30px;
 		@media screen and (min-width: 452px) {
 			margin-right: 20px;
 		}
