--- a/css/sp.css
+++ b/css/sp.css
@@ -153,7 +153,7 @@ table {
       margin-right: -20px; } }
 
 .works article {
-  margin-top: 30px; }
+  margin-bottom: 30px; }
   @media screen and (min-width: 452px) {
     .works article {
       margin-right: 20px; } }
