--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,6 +174,10 @@ table {
 		h2 {
 			margin-bottom: 10px;
 			font-size: 1.4rem;
+			span {
+				font-size: 1.2rem;
+				color: #6f6f6f;
+			}
 		}
 		.skillBox {
 			width: calc(100% - 80px);
